# genedrop_rust

./: Cargo.toml  README.md
.circleci/: config.yml
benches/: large-chromosome.rs
src/: chromosome.rs  individual.rs  lib.rs  main.rs
